# WIB-IPFE

./: CMakeLists.txt  Makefile  README.md  basis.h  cmake_install.cmake
include/curve/: params.h
include/ibe/: CipherText.h  ElementList.h  HIDparam.h  MasterKey.h  PublicKey.h  SecretKey.h
include/schemes/: cp_pk_ipfe.h  hid_pk_ipfe_song.h  ibbe_pk_ipfe.h  wib_pk_ipfe.h
include/utils/: func.h  utils.h
policy_resolution/: policy_resolution.cpp
src/components/: CipherText.cpp  ElementList.cpp  HIDparam.cpp  MasterKey.cpp  PublicKey.cpp  SecretKey.cpp
src/schemes/: cp_pk_ipfe.cpp  hid_pk_ipfe_song.cpp  ibbe_pk_ipfe.cpp  wib_pk_ipfe.cpp
src/utils/: func.cpp  utils.cpp
unit_test/: test.cpp  test_ibbe.cpp  test_wib.cpp
